# akhenaten-tts

./: CMakeLists.txt
.github/workflows/: ci-macos.yml  ci-windows.yml
cmake/: ThirdPartyDependencies.cmake
src/: args_parser.cpp  tts-config.cpp  tts-config.hpp  tts.cpp  tts.hpp
